# windvoyager

./: .gitignore  README.md  TASK.md  package-lock.json  package.json
backend/: package-lock.json  package.json  server.js
backend/routes/: balloonRouter.js  balloonRoutes.js  weatherRouter.js
backend/scripts/: generate_wind_grid.py
backend/services/: balloonService.js  openMeteoService.js  weatherApi.js  weatherService.js
backend/utils/: dataCleaner.js  haversine.js  insightsCalculator.js  windAnalytics.js  windCalculator.js
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/components/: BalloonChart.jsx  BalloonDataPopup.css  BalloonDataPopup.jsx  BalloonTracker.jsx  ConstellationGraph.jsx  MapView.jsx  (+4 more)
gfs-mirror/: .env.example  .gitignore  BUILD.md  DESIGN_NOTES.md  Makefile  PLAN.md  README.md  pyproject.toml
gfs-mirror/scripts/: smoke.py
gfs-mirror/src/gfs_mirror/: __main__.py  config.py  dotenv.py  logging_.py  provided.py
gfs-mirror/src/gfs_mirror/domain/: cycle.py  schedule.py
gfs-mirror/src/gfs_mirror/pipeline/: download.py  process.py  runner.py  watcher.py
gfs-mirror/src/gfs_mirror/s3/: client.py
gfs-mirror/src/gfs_mirror/storage/: layout.py  manifest.py  recovery.py  retainer.py
gfs-mirror/tests/: conftest.py
gfs-mirror/tests/integration/: test_corruption_retry.py  test_recovery.py  test_runner_happy_path.py
gfs-mirror/tests/invariant/: test_cycle_rollover.py
gfs-mirror/tests/unit/: test_config.py  test_cycle.py  test_layout.py  test_manifest.py  test_recovery.py  test_retainer.py  test_schedule.py
(+29 files in other folders)
