[project]
name = "gfs-mirror"
version = "0.1.0"
description = "Resilient mirror of NOAA GFS forecast cycles for balloon flight planning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioboto3>=12.0.0",
    "botocore>=1.34.0",
    "tenacity>=8.2.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "moto[s3]>=5.0",
    "ruff>=0.5",
]

[project.scripts]
gfs-mirror = "gfs_mirror.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gfs_mirror"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: fast, pure-function tests",
    "integration: wired components against fake S3",
    "invariant: critical correctness tests (rollover, atomicity)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
